added history and quiz logic